@@ -1,3 +1,7 @@
+2006-06-17 Joachim Noreiko <jnoreiko@yahoo.com>
+
+	* C/gedit.xml: clean up to remove any out of date material
+
 2006-06-16  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es/es.po: Updated Spanish translation.
